# aoc2022-haskell

./: .gitignore  next.sh
day01/: day01.cabal
day01/app/: Main.hs
day02/: day02.cabal
day02/app/: Main.hs
day03/: day03.cabal
day03/app/: Main.hs
day04/: day04.cabal
day04/app/: Main.hs
day05/: day05.cabal
day05/app/: Main.hs
day06/: day06.cabal
day06/app/: Main.hs
day07/: day07.cabal
day07/app/: Main.hs  Parsing.hs  TreeBuilder.hs  Types.hs
day08/: day08.cabal
day08/app/: Main.hs
day09/: day09.cabal
day09/app/: Main.hs  Parsing.hs  Types.hs
day10/: day10.cabal
day10/app/: Main.hs  Parsing.hs  Types.hs
template/: dayxx.cabal
template/app/: Main.hs
