cabal-version:      2.4
name:               day08
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Kim Nilsson
maintainer:         kim@wayoftao.net

-- A copyright notice.
-- copyright:
-- category:

executable day08
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0,
                      containers,
                      matrix,
                      vector
    hs-source-dirs:   app
    default-language: Haskell2010
